src/test/ui/rfc-2008-non-exhaustive/uninhabited/indirect_match.stderr
error[E0004]: non-exhaustive patterns: type `uninhabited::IndirectUninhabitedEnum` is non-empty
  --> $DIR/indirect_match.rs:19:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `uninhabited::IndirectUninhabitedEnum`

error[E0004]: non-exhaustive patterns: type `uninhabited::IndirectUninhabitedStruct` is non-empty
  --> $DIR/indirect_match.rs:23:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `uninhabited::IndirectUninhabitedStruct`

error[E0004]: non-exhaustive patterns: type `uninhabited::IndirectUninhabitedTupleStruct` is non-empty
  --> $DIR/indirect_match.rs:27:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `uninhabited::IndirectUninhabitedTupleStruct`

error[E0004]: non-exhaustive patterns: type `uninhabited::IndirectUninhabitedVariants` is non-empty
  --> $DIR/indirect_match.rs:33:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `uninhabited::IndirectUninhabitedVariants`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
